force-app/main/default/objects/ampi__Dynamic_Loader__c/ampi__Dynamic_Loader__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Dynamic Loader</label>
</CustomObject>