force-app/main/default/objects/ampi__Dynamic_Loader__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>