force-app/main/default/objects/ampi__Dynamic_Loader__c/fields/ampi__Class__c.field-meta.xml
<CustomField>
    <fullName>ampi__Class__c</fullName>
    <label>Filter/Service</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>