force-app/main/default/objects/ampi__Dynamic_Loader__c/fields/ampi__Event__c.field-meta.xml
<CustomField>
    <fullName>ampi__Event__c</fullName>
    <description>Trigger event use the following short codes AI, AU, AD, AUD, BI, BU, BD</description>
    <inlineHelpText>Trigger event use the following short codes AI, AU, AD, AUD, BI, BU, BD</inlineHelpText>
    <label>Event</label>
    <length>5</length>
    <type>Text</type>
</CustomField>