force-app/main/default/objects/ampi__Dynamic_Loader__c/fields/ampi__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ampi__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>