force-app/main/default/objects/ampi__Dynamic_Loader__c/fields/ampi__Order__c.field-meta.xml
<CustomField>
    <fullName>ampi__Order__c</fullName>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>