force-app/main/default/objects/ampi__Dynamic_Loader__c/fields/ampi__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>ampi__Service_Name__c</fullName>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>